2013-10-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* system.h: Move hwint.h include further down.
	* hwint.h (sext_hwi, zext_hwi): Define unconditionally.  Add
	gcc_checking_asserts.
	* hwint.c (sext_hwi, zext_hwi): Delete ENABLE_CHECKING versions.

2013-10-21  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	Fix volatile issues in optimize_bit_field_compare.
	* fold-const.c (optimize_bit_field_compare): Bail out if
	lvolatilep or rvolatilep.

2013-10-21  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	Fix DECL_BIT_FIELD depencency on flag_strict_volatile_bitfields
	and get_inner_reference returning different pmode for non-volatile
	bit-field members dependent on flag_strict_volatile_bitfields.
	* stor-layout.c (layout_decl): Remove special handling of
	flag_strict_volatile_bitfields.
	* expr.c (get_inner_reference): Don't use DECL_BIT_FIELD
	if flag_strict_volatile_bitfields > 0 and TREE_THIS_VOLATILE.

2013-10-21  Paulo Matos  <pmatos@broadcom.com>

	* ipa-inline.c (edge_badness): Cap edge->count at max_count for badness
	calculations.

2013-10-21  Jeff Law  <law@redhat.com>

	* tree-ssa-threadedge.c (thread_through_normal_block): New argument VISITED.
	Remove VISISTED as a local variable.  When we have a threadable jump, verify
	the destination of the jump has not been visised.
	(thread_across_edge): Allocate VISITED bitmap once at function scope and
	use it throughout.  Make sure to set appropriate bits in VISITED for E (start
	of jump thread path).

	* tree-ssa-threadupdate.c (mark_threaded_blocks): Reject threading through
	a joiner if any edge on the path has a recorded jump thread.

2013-10-21  Ian Lance Taylor  <iant@google.com>

	* doc/invoke.texi (Optimize Options): For -fno-toplevel-reorder,
	don't imply that attributes can solve all problems.
	(Directory Options): Fix typo.

2013-10-21  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.c (cortexa9_extra_costs): Update mult costs for
	extend and extend_add.
