@@ -1,3 +1,9 @@
+2013-10-21  Marek Polacek  <polacek@redhat.com>
+
+	PR middle-end/58809
+	* fold-const.c (fold_range_test): Return 0 if the type is not
+	an integral type.
+
 2013-10-21  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* system.h: Move hwint.h include further down.
